unpackaged/main/default/objects/Account/fields/First_Rename_Test_Field_20220414_2__c.field-meta.xml
<CustomField>
    <fullName>First_Rename_Test_Field_20220414_2__c</fullName>
    <label>First Rename Test Field 20220414-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>