unpackaged/main/default/objects/Account/fields/renamed_conflict_20220505__c.field-meta.xml
<CustomField>
    <fullName>renamed_conflict_20220505__c</fullName>
    <label>renamed conflict 20220505</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>